# ai-gamedev-pipeline

./: .gitattributes  .gitignore  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  README.md  codex.ps1  commit-msg.txt  commit_message.txt  gemini_mcp_settings.json  launch_unified_adapter.bat  launch_unified_adapter.sh  migrate_config.py  mkdocs.yml  output.txt  pixel_jumper.txt  prompt.txt  pytest.ini  restart_agp_debug.bat  start_agp_debug.bat  start_agp_system.bat  start_gateway.bat  sync_mcp_scripts.bat  tarea1.txt  tarea10.txt  tarea12.txt  tarea13.txt  tarea14.txt  tarea15.txt  tarea3.txt  tarea4.txt  tarea5.txt  tarea6.txt  tarea7.txt  tarea8.txt  tarea9.txt  verify_system.bat
gateway/: debug_config.py  pyproject.toml
gateway/.cache/: tool_catalog.json
gateway/app/: __init__.py  config.py  db.py  logging_config.py  main.py  security.py
gateway/data/: gateway.db
gateway/migrations/: 001_extend_schema.py  002_add_task_id_to_chat.py
gateway/tests/: conftest.py  test_adapter_control.py  test_agent_runner.py  test_artifact_service.py  test_context_service.py  test_integration.py  test_models.py  test_process_manager_t2.py  test_projects.py  test_prompt_service.py  test_task_execution_service.py  test_task_plan_service.py  test_task_plan_validation.py  test_tool_catalog.py  test_tool_shim.py
gateway/tools/: blender.create_primitive.json  blender.export_fbx.json  project.create_from_template.json  unity.get_scene_hierarchy.json  unity.instantiate_fbx.json
gateway/wrapper/: gemini-wrapper.js  test_wrapper.py
mcp_unity_bridge/: README.md  integration_test.py  mcp_adapter.py  nave.py  pyproject.toml  requirements-agent.txt  requirements.txt  spaceship.py  unity_tools.py  ws_blender_full_test.py  ws_blender_test.py
mcp_unity_bridge/src/: config_manager.py
mcp_unity_bridge/static/: log_viewer.css  log_viewer.html  (+7 more)
(+306 files in other folders)
